--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-* {
-  text-align: center;
+body {
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+  flex-direction: column;  
+  min-height: 100vh;        
+  margin: 0;                
+  text-align: center;     
 }
